unpackaged/main/default/objects/zkmulti__HazMatDetails__c/zkmulti__HazMatDetails__c.object-meta.xml
<CustomObject>
    <label>HazMat Details</label>
    <nameField>
        <label>HazMat Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HazMat Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>