unpackaged/main/default/objects/zkmulti__HazMatDetails__c/fields/zkmulti__CommodityRegulatedLevelCode__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CommodityRegulatedLevelCode__c</fullName>
    <label>Commodity Regulated Level Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>