unpackaged/main/default/objects/zkmulti__HazMatDetails__c/fields/zkmulti__IDNumber__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__IDNumber__c</fullName>
    <label>ID Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>