unpackaged/main/default/objects/zkmulti__HazMatDetails__c/fields/zkmulti__Offeror__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Offeror__c</fullName>
    <description>Offeror&#39;s name or contract number, per DOT regulation</description>
    <inlineHelpText>Offeror&#39;s name or contract number, per DOT regulation</inlineHelpText>
    <label>Offeror</label>
    <length>100</length>
    <type>Text</type>
</CustomField>