unpackaged/main/default/objects/zkmulti__HazMatDetails__c/fields/zkmulti__PackagingType__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__PackagingType__c</fullName>
    <label>Packaging Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>