unpackaged/main/default/objects/zkmulti__HazMatDetails__c/fields/zkmulti__ProperShippingName__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ProperShippingName__c</fullName>
    <label>Proper Shipping Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>